# fastapi_project

fastapi-project/: pyproject.toml
