[project]
name = "fastapi-project"
version = "0.1.0"
description = ""
authors = [
    {name = "kenk67",email = "rahulmg1899i@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "fastapi_project", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
